[MD User Menu] Un-hardcode profile card's spacing

On MD user menu, vertical spacings in the profile card used to be
hardcoded, hence causing some display problems on certain locales
(see first bug for how Hindi names would get chopped off).

This CL calculates the spacing needed given the height of the profile
name label and/or username label in the profile card, hence fixing
the chopped-off problem - see a new screenshot here: https://screenshot.googleplex.com/FHK5snyG0PH.

BUG=636321
BUG=615893

Review-Url: https://codereview.chromium.org/2230963004
Cr-Commit-Position: refs/heads/master@{#414167}

Former-commit-id: b409fbb2cd01a0d05a40dff2daa22685fa14d2f3